import{C as x}from"./CodeBlock-QczJ3iSH.js";import{d as z,a as r,o as t,b as i,w as e,F as p,Z as m,f as a,t as _,e as n,m as c,q as w,c as s,H as h,p as K}from"./index-OvJp0Zog.js";import{R as N}from"./RuleMatchers-q9CxnS4X.js";import{t as S}from"./toYaml-sPaYOD3i.js";const M={key:0,class:"mt-6"},T=c("h3",null,"Rules",-1),A={class:"stack mt-4"},F={class:"stack-with-borders"},H=c("dt",null,`
                            Config
                          `,-1),j={class:"mt-2"},J=z({__name:"ConnectionOutboundSummaryOverviewView",props:{data:{},dataplaneOverview:{}},setup(b){const C=b;return(q,E)=>{const R=r("KBadge"),V=r("RouterLink"),g=r("DataSource"),B=r("KCard"),D=r("DataCollection"),P=r("DataLoader"),$=r("AppView"),L=r("RouteView");return t(),i(L,{params:{mesh:"",dataPlane:"",connection:""},name:"connection-outbound-summary-overview-view"},{default:e(({t:O,route:y})=>[n($,null,{default:e(()=>[(t(!0),s(p,null,h([y.params.connection.replace(/-([a-f0-9]){16}$/,"")],f=>(t(),s("div",{key:f,class:"stack-with-borders"},[n(m,{layout:"horizontal"},{title:e(()=>[a(`
              Protocol
            `)]),body:e(()=>[n(R,{appearance:"info"},{default:e(()=>[a(_(O(`http.api.value.${["grpc","http","tcp"].find(k=>typeof C.data[k]<"u")}`)),1)]),_:2},1024)]),_:2},1024),a(),C.data?(t(),s("div",M,[T,a(),n(P,{src:`/meshes/${y.params.mesh}/dataplanes/${y.params.dataPlane}/rules`},{default:e(({data:k})=>[n(D,{predicate:u=>u.ruleType==="to"&&!["MeshHTTPRoute","MeshTCPRoute"].includes(u.type)&&u.matchers.every(o=>o.key==="kuma.io/service"&&(o.not?o.value!==f:o.value===f)),items:k.rules},{default:e(({items:u})=>[c("div",A,[(t(!0),s(p,null,h(u,o=>(t(),i(B,{key:o},{default:e(()=>[c("div",F,[n(m,{layout:"horizontal"},{title:e(()=>[a(`
                            Type
                          `)]),body:e(()=>[a(_(o.type),1)]),_:2},1024),a(),o.matchers.length>0?(t(),i(m,{key:0,layout:"horizontal"},{title:e(()=>[a(`
                            To
                          `)]),body:e(()=>[c("p",null,[n(N,{items:o.matchers},null,8,["items"])])]),_:2},1024)):w("",!0),a(),o.origins.length>0?(t(),i(m,{key:1,layout:"horizontal"},{title:e(()=>[a(`
                            Origin Policies
                          `)]),body:e(()=>[n(g,{src:"/*/policy-types"},{default:e(({data:v})=>[(t(!0),s(p,null,h([Object.groupBy((v==null?void 0:v.policies)??[],d=>d.name)],d=>(t(),s("ul",{key:d},[(t(!0),s(p,null,h(o.origins,l=>(t(),s("li",{key:`${l.mesh}-${l.name}`},[d[l.type]?(t(),i(V,{key:0,to:{name:"policy-detail-view",params:{mesh:l.mesh,policyPath:d[l.type][0].path,policy:l.name}}},{default:e(()=>[a(_(l.name),1)]),_:2},1032,["to"])):(t(),s(p,{key:1},[a(_(l.name),1)],64))]))),128))]))),128))]),_:2},1024)]),_:2},1024)):w("",!0),a(),c("div",null,[H,a(),c("dd",j,[c("div",null,[n(x,{code:K(S)(o.config),language:"yaml","show-copy-button":!1},null,8,["code"])])])])])]),_:2},1024))),128))])]),_:2},1032,["predicate","items"])]),_:2},1032,["src"])])):w("",!0)]))),128))]),_:2},1024)]),_:1})}}});export{J as default};
