import{d as I,r,o as t,m as _,w as e,b as o,c as n,L as u,M as h,Z as b,e as a,t as y,k as l,p as g,l as M,a7 as K,H as N,J as T,q as z}from"./index-BMuIJR7T.js";import{a as j,A as H}from"./AccordionList-CRs_RXO0.js";import{C as q}from"./CodeBlock-CdlA9qXg.js";import{P as E}from"./PolicyTypeTag-DIL5mWxw.js";import{R as F}from"./RuleMatchers-D71X5bes.js";const B=i=>(N("data-v-3051e933"),i=i(),T(),i),J={key:0,class:"rules"},Y=B(()=>l("h3",null,"Rules",-1)),Z={class:"mt-4"},G={class:"stack-with-borders"},Q=B(()=>l("dt",null,`
                                    Config
                                  `,-1)),U={class:"mt-2"},W=I({__name:"ConnectionOutboundSummaryOverviewView",props:{data:{},dataplaneOverview:{}},setup(i){const V=i;return(X,ee)=>{const P=r("KBadge"),R=r("RouterLink"),D=r("DataSource"),L=r("KCard"),O=r("DataCollection"),S=r("DataLoader"),A=r("AppView"),$=r("RouteView");return t(),_($,{params:{mesh:"",dataPlane:"",connection:""},name:"connection-outbound-summary-overview-view"},{default:e(({t:x,route:f})=>[o(A,null,{default:e(()=>[(t(!0),n(u,null,h([f.params.connection.replace(/-([a-f0-9]){16}$/,"")],v=>(t(),n("div",{key:v,class:"stack-with-borders"},[o(b,{layout:"horizontal"},{title:e(()=>[a(`
              Protocol
            `)]),body:e(()=>[o(P,{appearance:"info"},{default:e(()=>[a(y(x(`http.api.value.${["grpc","http","tcp"].find(k=>typeof V.data[k]<"u")}`)),1)]),_:2},1024)]),_:2},1024),a(),V.data?(t(),n("div",J,[Y,a(),o(S,{src:`/meshes/${f.params.mesh}/rules/for/${f.params.dataPlane}`},{default:e(({data:k})=>[o(O,{predicate:p=>p.ruleType==="to"&&!["MeshHTTPRoute","MeshTCPRoute"].includes(p.type)&&p.matchers.every(s=>s.key==="kuma.io/service"&&(s.not?s.value!==v:s.value===v)),items:k.rules},{default:e(({items:p})=>[l("div",Z,[o(j,{"initially-open":0,"multiple-open":"",class:"stack"},{default:e(()=>[(t(!0),n(u,null,h(Object.groupBy(p,s=>s.type),(s,w)=>(t(),_(L,{key:w},{default:e(()=>[o(H,null,{"accordion-header":e(()=>[o(E,{"policy-type":w},{default:e(()=>[a(y(w)+" ("+y(s.length)+`)
                            `,1)]),_:2},1032,["policy-type"])]),"accordion-content":e(()=>[l("div",G,[(t(!0),n(u,null,h(s,d=>(t(),n(u,{key:d},[d.matchers.length>0?(t(),_(b,{key:0,layout:"horizontal"},{title:e(()=>[a(`
                                    To
                                  `)]),body:e(()=>[l("p",null,[o(F,{items:d.matchers},null,8,["items"])])]),_:2},1024)):g("",!0),a(),d.origins.length>0?(t(),_(b,{key:1,layout:"horizontal"},{title:e(()=>[a(`
                                    Origin Policies
                                  `)]),body:e(()=>[o(D,{src:"/policy-types"},{default:e(({data:C})=>[(t(!0),n(u,null,h([Object.groupBy((C==null?void 0:C.policies)??[],m=>m.name)],m=>(t(),n("ul",{key:m},[(t(!0),n(u,null,h(d.origins,c=>(t(),n("li",{key:`${c.mesh}-${c.name}`},[m[c.type]?(t(),_(R,{key:0,to:{name:"policy-detail-view",params:{mesh:c.mesh,policyPath:m[c.type][0].path,policy:c.name}}},{default:e(()=>[a(y(c.name),1)]),_:2},1032,["to"])):(t(),n(u,{key:1},[a(y(c.name),1)],64))]))),128))]))),128))]),_:2},1024)]),_:2},1024)):g("",!0),a(),l("div",null,[Q,a(),l("dd",U,[l("div",null,[o(q,{code:M(K).stringify(d.raw),language:"yaml","show-copy-button":!1},null,8,["code"])])])])],64))),128))])]),_:2},1024)]),_:2},1024))),128))]),_:2},1024)])]),_:2},1032,["predicate","items"])]),_:2},1032,["src"])])):g("",!0)]))),128))]),_:2},1024)]),_:1})}}}),ce=z(W,[["__scopeId","data-v-3051e933"]]);export{ce as default};
